--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "chess.js": "^1.4.0",
+    "react": "^18.3.1",
+    "react-chessboard": "^4.4.0",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
     "socket-client": "^1.0.0",
